[package]
name = "actix-route-config"
version = "0.1.1"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
description = "Allow clean configuration of Actix Web routes"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TobiasDeBruijn/actix-route-config"
keywords = ["actix-web", "routing", "http"]
categories = ["network-programming"]

[dependencies]
actix-web = { version = "^4.3", default-features = false }